fix($cli): Add support for multiple help sections.
Multiple help sections are now supported. Automatic indentation, even of multi-line texts, is
enabled by default. Sections' names can be customized.

In only breaks multi-line texts that are passed to `.help` already indented, this requires a very
tiny change to fix and it will improve the overall code quality. It fixes issue #67.

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
     "fast-levenshtein": "^2.0.6",
+    "lodash": "^4.17.4",
     "lodash.camelcase": "^4.3.0",
     "lodash.kebabcase": "^4.1.1",
     "micromist": "^1.0.1",
