--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
     "fast-levenshtein": "^2.0.6",
-    "lodash": "^4.17.4",
     "lodash.camelcase": "^4.3.0",
     "lodash.kebabcase": "^4.1.1",
+    "lodash.merge": "^4.6.0",
     "micromist": "^1.0.1",
     "prettyjson": "^1.2.1",
     "tabtab": "^2.2.2",
