--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
   // Force vscode to use prettier version of node_modules
-  "prettier.prettierPath": "./node_modules/prettier",
-  "tslint.enable": false,
+  "prettier.prettierPath": "./node_modules/prettier/index.cjs",
   "javascript.validate.enable": false,
   "eslint.enable": true,
   "eslint.format.enable": true,
-  "eslint.alwaysShowStatus": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
@@ -17,16 +15,5 @@
   "[typescript]": {
     "editor.formatOnSave": true
   },
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "spellright.language": [
-    "en"
-  ],
-  "spellright.documentTypes": [
-    "latex",
-    "plaintext"
-  ],
-  "spellright.recheckOnSave": false,
-  "jest.pathToJest": "npm test --",
-  "jest.restartJestOnSnapshotUpdate": true,
-  "jest.enableInlineErrorMessages": true
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
