--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ on:
       - package.json
       - pnpm-lock.yaml
 
-  pull_request:
+  pull_request_target:
     branches:
       - master
       - beta
