ci: fix releasing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,8 +55,7 @@ jobs:
         run: pnpm test:dist
 
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
-        id: semantic
+        run: pnpm semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
