--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "prebuild:web": "npm run build:webtypes",
     "build:web": "tsup --config tsup.web.ts -d docs/.vuepress/public/assets/js/@caporal",
     "refresh-markdown": "./scripts/gen-contributors.js && ./scripts/gen-dependents.js && ./scripts/gen-readme.js",
-    "build:typedocs:watch": "nodemon --watch src --exec 'typedoc src --hideBreadcrumbs --hideIndexes'",
-    "build:typedocs": "typedoc src --hideBreadcrumbs --hideIndexes",
-    "build:docs": "npm run build:typedocs && vuepress build docs",
-    "build:docs:watch": "npm run dev:vuepress",
-    "build:webtypes": "tsc --project tsconfig.web.json",
+    "build:typedocs:watch": "nodemon --watch src --exec 'typedoc src'",
+    "build:typedocs": "typedoc --plugin typedoc-plugin-markdown src/index.ts",
+    "docs:dev": "pnpm build:typedocs && vuepress dev docs",
+    "docs:build": "pnpm build:typedocs && vuepress build docs",
     "build:js": "tsup",
-    "postbuild:typedocs": "./scripts/post-typedoc.sh",
     "prebuild:docs": "npm run build:web",
     "dev:vuepress": "vuepress dev docs",
     "clean": "rimraf dist",
@@ -65,20 +63,14 @@
   "repository": "mattallty/Caporal.js",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.22.10",
-    "@babel/core": "^7.22.11",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "^7.22.11",
     "@octokit/rest": "^20.0.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@tsconfig/node16": "^16.1.1",
-    "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "babel-jest": "^29.6.4",
+    "@vuepress/client": "2.0.0-beta.66",
     "cheerio": "1.0.0-rc.12",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
@@ -87,20 +79,13 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
-    "expose-loader": "^4.1.0",
     "husky": "^8.0.3",
-    "jest": "^29.6.4",
     "json": "^11.0.0",
     "markdown-table": "^3.0.3",
-    "memfs": "^4.2.1",
-    "monaco-editor": "^0.41.0",
-    "monaco-editor-vue": "^1.0.10",
-    "monaco-editor-webpack-plugin": "^7.1.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.2",
-    "raw-loader": "^4.0.2",
     "rimraf": "^5.0.1",
     "semantic-release": "^21.1.1",
     "strip-ansi": "^7.1.0",
@@ -108,14 +93,13 @@
     "ts-node": "^10.9.1",
     "tsup": "^7.2.0",
     "typedoc": "^0.25.0",
-    "typedoc-plugin-markdown": "^3.16.0",
+    "typedoc-plugin-markdown": "3.16.0",
     "typedoc-plugin-no-inherit": "^1.4.0",
     "typescript": "~5.1.6",
     "vitest": "^0.34.3",
-    "vue-monaco": "^1.2.2",
+    "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.66",
-    "xterm": "^5.2.1",
-    "xterm-addon-fit": "^0.7.0"
+    "vuepress-plugin-typedoc": "^0.13.0"
   },
   "dependencies": {
     "@types/glob": "^8.1.0",
