--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "useUnknownInCatchVariables": false
   },
   "include": ["**/*.ts", "**/*.mts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "examples"]
 }
