chore(package): clean package deps and scripts

--- a/package.json
+++ b/package.json
@@ -11,25 +11,16 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --fix .",
-    "prebuild": "npm run clean",
-    "now": "now",
-    "build": "pnpm build:js",
+    "build": "rimraf dist && pnpm build:js",
     "build:ci": "npm run build:all",
-    "postbuild:ci": "npm run test:ci && cp -r coverage docs/.vuepress/dist/",
-    "build:all": "run-p -n build:types build:js build:docs",
-    "prebuild:web": "npm run build:webtypes",
-    "build:web": "tsup --config tsup.web.ts -d docs/.vuepress/public/assets/js/@caporal",
+    "build:all": "run-p -n build:js docs:build",
     "refresh-markdown": "./scripts/gen-contributors.js && ./scripts/gen-dependents.js && ./scripts/gen-readme.js",
     "build:typedocs:watch": "nodemon --watch src --exec 'typedoc src'",
     "build:typedocs": "typedoc --plugin typedoc-plugin-markdown src/index.ts",
     "docs:dev": "pnpm build:typedocs && vuepress dev docs",
     "docs:build": "pnpm build:typedocs && vuepress build docs",
     "build:js": "tsup",
-    "prebuild:docs": "npm run build:web",
-    "dev:vuepress": "vuepress dev docs",
-    "clean": "rimraf dist",
     "test": "vitest run src",
-    "test:ci": "vitest --coverage src",
     "test:dist": "vitest dist-tests",
     "test:watch": "vitest src",
     "commit": "git-cz",
@@ -94,7 +85,6 @@
     "tsup": "^7.2.0",
     "typedoc": "^0.25.0",
     "typedoc-plugin-markdown": "3.16.0",
-    "typedoc-plugin-no-inherit": "^1.4.0",
     "typescript": "~5.1.6",
     "vitest": "^0.34.3",
     "vue": "^3.3.4",
