--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:typedocs:watch": "nodemon --watch src --exec 'typedoc src'",
     "build:typedocs": "typedoc --plugin typedoc-plugin-markdown src/index.ts",
     "docs:dev": "pnpm build:typedocs && vuepress dev docs",
-    "docs:build": "pnpm build:typedocs && vuepress build docs",
+    "docs:build": "vuepress build docs",
     "build:js": "tsup",
     "test": "vitest run src",
     "test:dist": "vitest dist-tests",
@@ -89,7 +89,8 @@
     "vitest": "^0.34.3",
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.66",
-    "vuepress-plugin-typedoc": "^0.13.0"
+    "vuepress-plugin-typedoc": "^0.13.0",
+    "wrangler": "^3.6.0"
   },
   "dependencies": {
     "@types/glob": "^8.1.0",
