--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,12 +61,24 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       # we run docs:build twice because of the way the sidebar in vuepress plugin is generated
-      - name: Deploy website
+      - name: Deploy preview website
+        if: ${{ github.ref_name != 'master' }}
         run: |
           pnpm build:typedocs
           pnpm docs:build
           pnpm docs:build
-          pnpm exec wrangler pages deploy docs/.vuepress/dist --branch ${{ github.ref_name }} --project-name caporal-website
+          pnpm exec wrangler pages deploy docs/.vuepress/dist --environment preview --project-name caporal-website
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+      - name: Deploy production website
+        if: ${{ github.ref_name == 'master' }}
+        run: |
+          pnpm build:typedocs
+          pnpm docs:build
+          pnpm docs:build
+          pnpm exec wrangler pages deploy docs/.vuepress/dist --environment production --project-name caporal-website
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
